# ICG_2025_HW4

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/shaders/: bling-phong.frag  bling-phong.vert  cubemap.vert  explode.frag  explode.geom  explode.vert  glass_schlick.frag  glass_schlick.vert  gouraud.frag  gouraud.vert  metallic.frag  metallic.vert  wire.frag  wire.geom  wire.vert
